[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "^0.20"
default-features = false # workaround for Windows
features = ["pancurses-backend"] # workaround for Windows